<resources>
    <string name="app_name">Informer PI</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="news">News</string>
    <string name="timetable">Timetable</string>
    <string name="radio">Radio</string>
    <string name="struct">Conformation</string>
    <string name="web">Website</string>
    <string name="polytech">Polytechnical institute</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_not_available">Sorry, browser is not available</string>
    <string name="tech_tv">Tech TV</string>
    <string name="inst">About Institute</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="autolink_map">1600 Amphitheatre Parkway, Mountain View, CA 94043</string>
</resources>
